@@ -1,0 +1,400 @@
+@895:1:1:1246:14654 1:N:0:NNNNN
+NNNNCGCCCACCACCGTGCCCTCCAACCTGATGGT
++
+][aaX__aa[`ZUZ[NONNFNNNNNO_____^RQ_
+@895:1:1:1248:9583 1:N:0:NNNNN
+ACTGGGCGTAGACGGTGTCCTCATCGGCACCAGC
++
+\UJUWSSV[JQQWNP]]SZ]ZWU^]ZX][^TXR`
+@895:1:1:1252:19493 1:N:0:NNNNN
+NNNNCGTGGTTGGTGAGGTCACTGAGCTTCATGTC
++
+OOOKONNNNN__`R]O[TGTRSY[IUZ]]]__X__
+@895:1:1:1255:18861 1:N:0:NNNNN
+NNNNCGAGAAGCTGATCTACCGCGCCGAGCGCATC
++
+bb_^^bb_XTbbbbbb_bab]KTITZQTZ]ZYT^^
+@895:1:1:1264:15854 1:N:0:NNNNN
+CGTGATGATGTGCTTGCGGCCGGAGGGCCTGTTGCCCAGG
++
+````W__ZZ`R__ZSOJNNNQWSQZ\^X\W_______J__
+@895:1:1:1265:2265 1:N:0:NNNNN
+TATAGCGTGAGGCGATGACGTTGCTGTCCTTGGCGCGGC
++
+`bbbbbbbbbbbbbUbbbbb]X_QXUQ[QWOPTTZ__X_
+@895:1:1:1273:17782 1:N:0:NNNNN
+TCGAAAATCACGTGGGAGATGCACTATCACGCGGTCGGTGAGGAAGTGACCGACCACACCGAGCTCGC
++
+OOOOONNNOO^^X^`]TVa]WWLSSKNNONI]S[Q]SWXZX_\\^ZF___Y\V]]_____]KTRV^X^
+@895:1:1:1274:18571 1:N:0:NNNNN
+AGCAGGCGAACAGCACGCCGAACAATACTGTCTTCATGCCAAACTGCTGAAAGCCGAGCACAGCAGAAATGCTCCAGAG
++
+VMJPVUIPHRUaZRZ\___XUZ[X[]]`]X]]]]]_______________XHXX]]S]]Z``X]`]VX]]_____ZZMa
+@895:1:1:1276:16426 1:N:0:NNNNN
+GCAGGTATTGGTTTGCCTAACGTTGAAATTGCAGGATTAACG
++
+[[Z[[Z`\`\^[^`^U]ZZROFONOOQYPY]ZU]URQYQV``
+@895:1:1:1283:17864 1:N:0:NNNNN
+ATTCGTCAACCCGCGGCTCGAGCTGCGCATCC
++
+`Q\`[Z______`_\Q`\[MTYWTW_T_TTX`
+@895:1:1:1287:13756 1:N:0:NNNNN
+AGGGGAAATCCATTTCAAAGCGTTCGTGATCACGATAGACCGTCACTAAGCCACTGACTGTATGGAAGCAAAC
++
+^W_``[XX]]YN[Y[`_`\YVTNWWZ\[[W]X`T[__]X\_`__`JSWSZ_UXU_]LZIZTWZZ]XZ_UZWV`
+@895:1:1:1290:11501 1:N:0:NNNNN
+CCAATCACTGCGATCGGCGCACGGACCTTGGAGCCGGAGCAG
++
+OKOOOOONKOYTRO[[[N[[W`[NUKHNOO_I__`[`K[`X_
+@895:1:1:1294:5882 1:N:0:NNNNN
+GGCATTGACTATGGGATCCAAGCGATTGCACATG
++
+aUaaaaaYaaW[[Q[NNOOO_____ZXM_X_UX_
+@895:1:1:1295:6189 1:N:0:NNNNN
+GTCTAATCTTCGAGCAACTCCACGCTGTAGTATCATCAAGGTTCAAGATGTTAATGAATAACAATTGCGCAGCAA
++
+ONKNNJORQWSWOWWWZZXURLQZRT[RWX\]\_\___a_X^\\\MTVR]_\___\XX^]JWUU][__[___aL_
+@895:1:1:1295:5208 1:N:0:NNNNN
+GCGCATCGCGCGGCTTGAGGACGCTGTCTTCAAGC
++
+UaaaaaaaaaaWQaaLLUZ[STHJFWT[JW_Y^`_
+@895:1:1:1296:1784 1:N:0:NNNNN
+GATGTTGAATTTTTACATCAACCGTGCCGGC
++
+WNOWLSZIOO]VSO][X^^[a_a_Z[W[W[^
+@895:1:1:1296:6541 1:N:0:NNNNN
+AAACAGCTCTTCGGATTTAAAGATTACGCAGGACATCCGGCAGGCACTAGCGAAAGACAGGGAGCTGTCCACGACGGCGAAGCAC
++
+YU[^a]SZ]Z[[X]U__\_____________S\\\_R________[_^]`FWNNW_\^]X_[[_[^\^]R_________\Y`RU^
+@895:1:1:1298:13380 1:N:0:NNNNN
+AGCTGAGCGGGCACATCTTCTTCAAGCACCGCTACTTCGGCTTCGATGACGCGG
++
+OOJOOONPNKQLOQFZSXOR^Q][^__________^XPQ\WX\VRIPSXN__X_
+@895:1:1:1299:3449 1:N:0:NNNNN
+TGGCGCGCGCTTCAAATACGAAAACTTGAAGCTCGGCTGGAGGGC
++
+WVY[NNNKNHNOJOO__\S\\SQQ`WROTQOWWPWUW[`]YYUS_
+@895:1:1:1300:2738 1:N:0:NNNNN
+GTCCGTGCAAAGGGCACTACGTTTGAAGTCCCAGCAATTTCGGGCAGTTCACCGGCACTTT
++
+OOOOONY]]TU[[[[W[ZUQ[`ZZXWIWOSKYYYQ____R_Y\JY^][]_JQSWQ___K_^
+@895:1:1:1303:6251 2:N:0:NNNNN
+CGAGATTACAGGTGGGATTCCCGAACCGATATTTGGTTAACCTAAGGAGGCTGAG
++
+]Z]]V_______\___X______\\___\\\\\\\\\XX\_\\\\\W\\\\\\\_
+@895:1:1:1303:14389 2:N:0:NNNNN
+GTCGAGTCCGACAACCCGATCATGCAGCCGCGCCATGCCCGCTTGCCAG
++
+__Y_QYT`YS__S^[_RZIYJWJWS]]XQLSMQJFTVTVTZUVRV_aa_
+@895:1:1:1306:15360 2:N:0:NNNNN
+ACTTTACCTGCTCGGCACCTCCATCGCGCGACCTCTGATTGCCAA
++
+_______________ZW``X___\XQZaaZ___T_ZXT]]_____
+@895:1:1:1307:4308 2:N:0:NNNNN
+GAGTTAAAATGCCTGCCGCGTGCCCGGCCATGACAAAAATCTTTCTGCTTCGCACATCGC
++
+_____________X_____________X__________XT\_______\S______\_T_
+@895:1:1:1308:20421 2:N:0:NNNNN
+CAGATGCCCGGCTGCTTTTTCCGGATCCGAAATCCTATTATGGCATTCCGCTCGATCCGC
++
+____\____\\_\__\______\_\\___\\\X\_\\_\\\\\\\\\\\\_\_\\\\\\_
+@895:1:1:1308:2539 1:N:0:NNNNN
+TTCCGGCGCCACGCGGACAGATCACGGACCGCAACGGAGTGCCGCTGGCG
++
+________XFW`[XX__R__XXYY]UWUH`XV]Z`______URWW^`[X^
+@895:1:1:1308:2539 2:N:0:NNNNN
+CGGCAGCTTGTCCTTGATTCCCTCGTACTCCTGCGGCGTGAGATTTGGAGCGATCTCAAACGGCATG
++
+______\___YYX_`_`__XQ_[__^_^\^XX_Z_^I[W\V[OSWL__Z`_\_Z__P\^^O`ZOXP`
+@895:1:1:1309:4153 2:N:0:NNNNN
+GGACGCGCACGCCGGTGAGGAACGACCCGCCCGCGCGGGCGTGGTCGCCGGGGCCGTCC
++
+```````__``````N`Z]]_X\`]\````Y\\Q`]NK_\VJT[N^W[\TW`````YF`
+@895:1:1:1312:10985 2:N:0:NNNNN
+GAGCGCGTCGAGCCCCGCGTGGTCGACCGCGAGCCGTTCGAGCGACCGCCAGTGGCTCCGG
++
+______________________\________\____\___X_____\___\_\\\\\_\X_
+@895:1:1:1314:10430 2:N:0:NNNNN
+CCTGACTCTCGGCCTGGCGCTTACTTTCGCGCCTGGAAGCCTCACGACACAGCAGAAGTCTGCCTGGCGCAC
++
+_________________________________\__\____\_____________\\_X_]WWXX\\\_\\_
+@895:1:1:1318:10532 1:N:0:NNNNN
+TACGCTATCAACGGGTTCGGTCGTATCGGGCGCAACGTGCTTCGCGCCATGACGCAAAAACAAGTCGAGCGGGTTCGCGCAATCAATGACCTCACTGACACGCGCAC
++
+TWNNWWT[WW____\U__XUTZ[WW__[]____T___X___O_____^ZY_XZ_______^ZSXV]XT]Z`IZQK]Z_]Z_Z__a]Y]VXJPSLX^[[^[_Y_ZTR`
+@895:1:1:1318:10532 2:N:0:NNNNN
+ATTCGAGCACAACATCGACATCCAATTTTTTCCACGGCAAATTCGCCGGGTCGCGCTCC
++
+`XX[[X_`__\____W_^`_____\__________]X_W^TXL\QT[OZQU`]^^__X_
+@895:1:1:1320:11648 2:N:0:NNNNN
+AACGATTCGAACACGGTAATTGCCGTTTTCGGCGGCGACTTCGAAGGCGGCG
++
+O]X]U_X`_X[X[[[VFSTSOOOOOY[`_XWPQ[V_____ZUURSQWZYY^_
+@895:1:1:1325:8700 1:N:0:NNNNN
+CAGCTGCAGCAATTCGCCGTCGTGGGTTTCGATTGGGGCGGCCGCGCCGC
++
+]VP[W]UT][_XXX`````]^^S^^XFXTT^\^\^_\___XX_S____Z_
+@895:1:1:1326:7273 1:N:0:NNNNN
+TATCAATACTGGCAACGCAGGTGTTGCTGGCGAGGCCAACACTATCCGTATCGG
++
+VNSWSOONNONGOOO[[[[[____ZRWWWW^[UWXSIWWZTTQYVZVZR\____
+@895:1:1:1326:7273 2:N:0:NNNNN
+GTGGGATGCCTTCGGGATCAACCTCTTTTTTATAACGGAACGTGACCGGTTTGAGCGCGTGAATA
++
+NZSVNNKOOOWJTWJ[[V[[W[___UT[[RKKIKNN[[F\[[PZW____\]__Y`______L\O_
+@895:1:1:1327:13028 2:N:0:NNNNN
+ACTAAGTGGCGTATACCCTTCCATTTCAACTCGCAGTTGATGGTTACCCTGAGCGAGAGACTCCAGCCGAAGCCGGGTTTGTCCCTTGAGTTCTCCATCAATAAAAACTCTGGC
++
+___________________________________________\_________________________X\______\\__\\_\\\\W\\\___\\\_\\X\R\HQQN]\\\_
+@895:1:1:1327:15301 2:N:0:NNNNN
+TCAGTCGTCGAACGCTATACCGGTCAACTCGTCTGTCGAGCCGG
++
+]]OX]ZZZZaM]U]Z__________]X`Z]`[]S]]]]WZ____
+@895:1:1:1328:3708 2:N:0:NNNNN
+CCGAGGCTGAGGGCGAAAGGCAACAATGAGATCGTCGACATCGTT
++
+``]]`UNR]VZTZZJVSPTFOIZUN]]ZH]]]LW[WX]]Z___\_
+@895:1:1:1330:9540 2:N:0:NNNNN
+TCCTCCATAGAGTGTTCCGAAGTAAGGTGCCAACGGGTCTTCCTTCGGGAGACTTGCCTGGTATTTTGCCAGCTTCTGGTGAACCGAATCC
++
+T____[N\NWKNNNNTSYYWO[WWQ[TXXP__[`X_`U_QW]][Z_[__^_[_[__Z___\U\\_ZTO_]\\`\^__Q\\__Z__PPV\]_
+@895:1:1:1331:1766 1:N:0:NNNNN
+TGCTGCTGATCGGCTGTGCCCACGAACTTTCTGGC
++
+OOOOON]]Y[__XFXWLVY\WSXXVRYZ`ZMV[O`
+@895:1:1:1333:2512 1:N:0:NNNNN
+TGGCGAGAGTCGCCTCAGGGCGGCATATCTTTGAGGCGAATGGGAATCGGTTTGCCCTGTTCCT
++
+\_\``V[R[U[UY[U``__WNYWWTUaTYP]_[YZ```\XSYLQROISSWNYGSK````]`Z`a
+@895:1:1:1333:2512 2:N:0:NNNNN
+CTTACGCCTTGTCTTTGAGCGCCGTGGAGCTCGGATGGCGACGCCTGCGC
++
+ZXWSXQ[UYW]Wa]W\````````\``]`````_Z```M`JaYW[JVU``
+@895:1:1:1333:2445 2:N:0:NNNNN
+AGATTGTCGGAGCGCCAGTTCGAGCTGGCGTGCTCTGCCGCCCCCTATGT
++
+________X_Z]]]]____________________________ZXZ____
+@895:1:1:1334:19532 2:N:0:NNNNN
+AGTACTACGTCATCGAATCGCAGAATCCGAAGATGCAGGGCTTCGACGGCGCCGTGAT
++
+^WOSWOOOGOYQOOQUTZTZ__Z____X_GOOMEIIOOJNUZVR^ZVK[M\S\^^___
+@895:1:1:1335:19932 1:N:0:NNNNN
+GACTCACCTCACAGTCTTCCAGGCCCGCGAAAGCAATGATAGGGCAATCGAGAGGCTCTTCAGTCGCATAAGTATACGTCTCACAGATCG
++
+Rbbbb`bbbb]]RVSONNNOZTZZa_____X``X`]]]UX`]``]_______\__X\\]]_\_\_]]]]]\_\__\__\\__\X\__\__
+@895:1:1:1335:19932 2:N:0:NNNNN
+CTATCCACCAGTTACCCACAGCCGAGTTCGTGGGAGAACTGCGTCGTCTCAATGGTACATCAGAG
++
+__________`]]``__T__```X`UYY\[Y[YGYNNNNO______\___ZW]][T]WVZ_\___
+@895:1:1:1336:4956 1:N:0:NNNNN
+GCTCGGCGAGGTGTTCCGCCAGCGCACGACTGCGGAATGGGTCGATCTCCTC
++
+][UP[]]]RV_^_]X]]]]Z`_`_`\```O]]]a]]^T``SLXWRYX[UP[^
+@895:1:1:1336:4956 2:N:0:NNNNN
+CGGTACTCGATCGGCGTGCCCGAGAAGCGCATCGGGCTCGC
++
+^^``W`\S_\V[Z__Q`_Q_V`X]``^```^\``\RV]]]_
+@895:1:1:1338:15407 1:N:0:NNNNN
+AGAAGAAGTCCCAGACGTCGCCCACCACCGGCACCGAACCGCC
++
+T]M]UVRWOX]V[]]W\MWMS[\YY__\_]^_X`___Q__[__
+@895:1:1:1338:7557 2:N:0:NNNNN
+ATGTTAAACTCCGGTCGAACGGCCTTGGCACGGGCG
++
+VUQRYVLJWWNOW[L\[[Q[L[[[L[XTQW_____`
+@895:1:1:1338:6614 2:N:0:NNNNN
+CACAGGTCACTCAGCGGCTTATACAGCTTGCTCCGCCTTTCGCTCGGTCGAGAACACGATCTTTCCGTCACGCCTCATGG
++
+_____`\]X`_________________________W____\]]`]_______\X_\\]\WVXV]M\]\]\__\_\_\X__
+@895:1:1:1340:19387 2:N:0:NNNNN
+ATTTCGCGATTCTTGTGCTGGCTGCGCTCCATTTGGCAGGCTACCACCACGCCAGTGGGAAGATGCGTGATGCGCAC
++
+______________________________NOOFNOOOOO_L^^____Q_^`^I^VWTZT^K[X^____[\\]\\P^
+@895:1:1:1342:20695 2:N:0:NNNNN
+CGAGATCATAGGTGCGTTCGGCTTGATCTGGGCGAGCTGGCTTTCGAGATAGAACTTGCGCTCGTCG
++
+Y\UVNTUXXNVVOYHNNOOO_____[X`[WONNHINNOGO]U]XV___\__X\____X__W__X_\_
+@895:1:1:1342:11001 1:N:0:NNNNN
+ATAACGTTATTGGCTGTCGTGACACCGCTGCCGGC
++
+bbbbbbbbbbbbbbbOLNOO[UKTY]]]UU```Y`
+@895:1:1:1342:11001 2:N:0:NNNNN
+TCACTTGTGGAGCGAACACGGCCAGCGGTGCTCGCGCACTCGCTAGCAACACAAGCGGTGCCAAAA
++
+````````````````````````_`````\``T```````_`_]``]]`_`\``]\\USW[T[[`
+@895:1:1:1344:1968 1:N:0:NNNNN
+TGACCTTTTGTTTGAGCAGGGTTCCGACTGCCTGGACGTCCTGCTTCTTGACCGCCTGGATCAATGAAGACTCGGCCG
++
+[][PY]Y]]]a\\Wa]^]^`YSYTI]Y___\R^W_UU[V\_____[[W_]YG]_]UUWTT[[`L[POQWG^^^[W[[^
+@895:1:1:1347:8723 1:N:0:NNNNN
+ACGGATCGATGCCGCGAGCGAGGAGGCGATCGACGAGCCGGTCATAGAAGTCCAGGCCTGCCGGGTTCACCGCGCCC
++
+bbabbbbWbbbaabb_]_^aXW[JIY[[TTTZVGVOZXVTZRUOP^UZ]^_aZ_Z][[[ROPSSXOTPP]HRLOL^^
+@895:1:1:1347:8723 2:N:0:NNNNN
+GACGGCCGAGGGCCCTGCATCTGGGACAACTTTGT
++
+[[\\N[[[WQ\_[\`X`]W]OQQVXHW[PLX_Y__
+@895:1:1:1347:3237 1:N:0:NNNNN
+ACCACGTTCTTGACCTGCGCCTTGCCAACAGCCG
++
+\a`a^a[^aa[^^aa]a\a`TNOTSW`\_\_O`_
+@895:1:1:1347:3237 2:N:0:NNNNN
+TGGCGGTCGATCCCAAGCTCTACGAGGGCAGCTGGAGCGG
++
+_ST[UWISHWJOONHUW[LZ^^RX^UY^]WZ]Z]]S__Z_
+@895:1:1:1348:18672 2:N:0:NNNNN
+AGAATAATTTCATAATCGGGATAGTTCAGCCTGCCTAAAGAATCCAGGC
++
+ZZ]UX`]```_T__RZ```XJRURY]]ZX]`]]I]YJVVV_______X_
+@895:1:1:1348:1257 1:N:0:NNNNN
+ATCGAATCGGATCTGGCAGCTTTTGCCAGTTGGTCGGCGG
++
+X____`[JXNHNHNN[NSOTVU[Z[FOJZWTLX`O_____
+@895:1:1:1349:15165 2:N:0:NNNNN
+GAGCCGGGGGCCGAAGAAGCTGCGTTCCGTCGCCGGCAGTGGCTC
++
+_______________________Z_X`_[X`]\^SX]QXPXOZV`
+@895:1:1:1349:21156 1:N:0:NNNNN
+ACCGCAAGTCGGCGACCGGCAAGTACGAAAAGACC
++
+_U`U_\_W\a`PXRL[[[[WPRRHVTRJRN__P__
+@895:1:1:1349:13984 1:N:0:NNNNN
+GAAAGGATCAACTGCCGCTTCAAGTTCCAGAAACGCCGTCAGCTTTTCGTCGGCGCGCACAACGCAACGCTTCCC
++
+KIONKX[[[[X`O``]_UZ__L]_][__]___________Z]^XYJNNOO]^\^X]\\SXJNNJHNOOOM_____
+@895:1:1:1351:14718 1:N:0:NNNNN
+AGCGAACGAAGAGCCAAAAAAGCTCCACCTCTCGACAAG
++
+^`a^`[^^W[[Z[W]GLNNN\ZHZZZS]]ZVUY[Z____
+@895:1:1:1351:14718 2:N:0:NNNNN
+TTCAAAAGTTTCAGTGTGCAAGCGCCGTCGGAATAGCCACCACCTAAACCGGCACCTACCGGTATCACTTTATGTACATG
++
+VOUUJX[VYXYYY[T```QMUZ]Z]`]Q`XNIGONPYURU`[``XYLF\T]U]T]_\___ZOFXJYJYQJRNVTQ\_\__
+@895:1:1:1352:5369 2:N:0:NNNNN
+ATCAAACCCCTCAATCCGCACCGCGGGCTTGCTGCCAACATTGGAAAGATGGCATCCTCCTTTCCTGGGGGATGGGGAG
++
+][XXQ_____QZX_QTTY[F[[[[Z_UI_WNHOOO[SOIMSZWSUHPSWH\`_LTQTQWZIRPV\__K]^__Z____Z_
+@895:1:1:1353:6642 1:N:0:NNNNN
+TGATTATGTTGCGAATGGGTCTGACGCTGCTGG
++
+OOOOOKNNNNVYUYUOOFHNNNNOO_X_X____
+@895:1:1:1355:13535 1:N:0:NNNNN
+AAGCGCGATGATCGCAACCGTGCTTTATTCCGACCTTTCCGGTGGCCGG
++
+`\\]][^Z[^[[^^^]_XM_OSWZZ_Y`SPQ\W\\a____`^UW^\^^^
+@895:1:1:1355:13535 2:N:0:NNNNN
+CACTTTCACCATGAGCGCGTTCTTGCGTCGACAAATGGAGCAGTCGCAGGTGGTCAGTTCCGGGAAATCCGTATCGATCTCGAAGGTGACCGCGCCGCAG
++
+WRZWSTYYWZX_ZY_]_^_^_____________________Z___]]TZ]L[XRTJOJOO__________ZZGTT_WX___Z_Z_UZ[ZZ_____\_\\_
+@895:1:1:1357:19736 1:N:0:NNNNN
+AAAAGCATTACCCAACCGAACACACCGGCTGCAAATAGCCCAACCGCAGCGAGGCCGTTTAATCGTTCATTCCGAC
++
+T_X__________\_______________________\_________Z_____\_^\VR^NOHFJOOKOO^^[^Z^
+@895:1:1:1357:19736 2:N:0:NNNNN
+TTGGCCGCTTTTTAATTTGTTCGGATCGGTTTGCCAAAACGGGGATATTTGTCAAGCGGGAAACTTAGGAAAAATTTCTTAAGACTCATGCCTCCGTGTC
++
+__\______________[_^_____________L_X]^^^_____\_______aa_Z____________\__X______Z[[^[J]`^[^__________
+@895:1:1:1357:4413 2:N:0:NNNNN
+CCCCGCCGATGACCGACAGGTTCTGTCCAGGTGCT
++
+ZRZPNNRTYFQIJZOVISVKSQVPR\__X__\\\_
+@895:1:1:1358:4953 1:N:0:NNNNN
+AGAAGTTCGACCGCATGGTGAGCCGCTATGACCGCCAGGCAGATGGCTCGCTCAAAGAAGAACCGCGGG
++
+XY[YZW\^`^Y____IOONN`X_____________\_________[`\\__________[YY___^\\^
+@895:1:1:1362:3983 2:N:0:NNNNN
+TCGATATCGCCATCTTTTAAACAGGCGATCGGCACAACTTTGAAACCCGCCATAACCGCGCTCGC
++
+_____\`]]`]XZ]]Z]Z\Z__________`\`\`ZX[`]]``WSX]]]]___W________\__
+@895:1:1:1363:9988 2:N:0:NNNNN
+TCTCGAAGTACCAACCCATCGAGCCGTAGGTGTGGCCGGGCAGGCGCAGGGCCTTGATCTTCATCCCC
++
+`````X]`[Z__________S]Z]]`\]`]OXT]NYRXNVUO]V]VXVWXX`\\\USLSKQVSOR___
+@895:1:1:1363:11839 1:N:0:NNNNN
+ACAAGTACACCCTGCGCACCGCGCGCGGGATGACGGTGGCGATC
++
+KOHNNNOONNQY[[RTT\J[`_]_][O_`SU\[P\\___\__X_
+@895:1:1:1365:7390 2:N:0:NNNNN
+GCCCCAGCCCTTGAAGTCCGTGTGCCAGTGCGTGCGCGTCCAGATCGGCGGACC
++
+______________________\_____\___\__________^\_\___\X\_
+@895:1:1:1365:12527 2:N:0:NNNNN
+TCGTTGTCGTAGTCGCCCCAGATGCCCGGGCCGCCCACCTTGGCGACGCTCGTAAAGCGCTTGCCCATCTCGTT
++
+_____________________Z_____________________R_UZZZN`_U[[_____Z\___ZRM]U__\_
+@895:1:1:1368:4434 2:N:0:NNNNN
+CCAAGGAAGAATTTAGAGGAGTTACGAGTCATTCTTCCTCCGGCGCCTTCTGCAACAGCTCGTGCAACAGCAACCTTGCTTTGCTCCAGTCCC
++
+]W[]]]UR]UR]Y][\\`YR``__``_```_\```R[XXOLFVHT]UU[PX[WP[`_]]``__`_OYYXU\MSUXITSVTS``X\\XXMO`W`
+@895:1:1:1373:4848 1:N:0:NNNNN
+CGGTTGCGACGAGCGAGTCGGAGCCGACACCGTCGAGGATCGTC
++
+bbbb^^_^\b[_aa_^^R^__Z]G`_`\QZYTIXT]OVRS`\O_
+@895:1:1:1373:13994 1:N:0:NNNNN
+GATTCGACATTGTTGACGGCGGTCGGGCAGCCGAACAGGCCGACATTGGCCGG
++
+^R[W`^[[W^OWIJWIOOOHNNJOO]\^XX__X_X__X_____\ZUW[WZ[_a
+@895:1:1:1373:13994 2:N:0:NNNNN
+AGGCTGCCGTCGATCAGGCTTATGAGGCCAAGCTGATCGGCAAGGACAATATCAACGGCTGGCCGTTCGAC
++
+_______________LX[[[_Y__^__________]\`__________________XX__ZYS^YTK]VT^
+@895:1:1:1376:16513 2:N:0:NNNNN
+CGAACGATTTATCGACCACGACGGCACGCGTTGGTACCACACCGGCGATCGCGTGCGCCG
++
+_________________________\]`]]KOOFOOOOON]]]S\___\_\\W\_X\\__
+@895:1:1:1378:18986 1:N:0:NNNNN
+GACCAGCGGAACAACGGCAAAACTGAGCATCAAACTCAGGATCACCTGGCTAAGGATCAATAATTGAGCGGTTCCGCTTTCTCCCATCATGGCCG
++
+IONONOONNKWWWSSNOOOO_____\``W_WWS[W____X___________XS_]PXZVT`TOZQOOZJZUZ]_X__X_X_____UOXWZ][[[^
+@895:1:1:1378:18986 2:N:0:NNNNN
+GCGGTCGCTCTCCTGGCCTCGGGTCAGAATTCCTCTCTGACCGGAACACTTGCCGGGCAG
++
+_______________________\_Z]WTQYXXF]_______________VY^`X[^ZL^
+@895:1:1:1381:7062 2:N:0:NNNNN
+GCCGGCTCCCCACCGACGACAGCACGTACCCCGGCG
++
+______S__\___ZZ`LWW[\OZ^\W\[I]__YLR`
+@895:1:1:1381:4958 1:N:0:NNNNN
+ATCGAGGTGCACACCGCGAGCTTCCGCACGACGCGCGG
++
+[WMWO`ZL`W_`__`_____]]X^\_______a\_^T^
+@895:1:1:1381:4958 2:N:0:NNNNN
+AAGTGCTCGCGATAGGCCTCCCACAAGACGCCGCGGCGCGCGTAGGGCGATGAGATCCCGAGCAGCAGCGCG
++
+XVSWT]XX_[VX]_XT\[[V[^__^__X____]`______\`T__U[[[Y[_W_\X_]`_________QZ__
+@895:1:1:1382:5012 2:N:0:NNNNN
+CCGATGTCGACGTCGCCGGTGTCGGCGGGCAGCC
++
+[TWXTQXZT`_XXTPWZU\V[[_[W][[^^SR^^
+@895:1:1:1383:3089 2:N:0:NNNNN
+GGTCCGGTCTAAATCTTGTCCGGAGCCCAGATGATGAAATTGTCCCGGTTCGGCATCTTCACTTGCGGCA
++
+VURVVVPRY[NOFNOVRYYX[VVZPSX]]]_____VZSTZZUYZ]`]X]JXX]]X`]`X\\XX]`___X_
+@895:1:1:1383:14728 1:N:0:NNNNN
+TGATCAACTTTGCTCTCCAGCCCGACCAGCAG
++
+OOOIORWQWNNNOONTYW[T_\^\W_UXXX^`
+@895:1:1:1383:6776 1:N:0:NNNNN
+CAATACGAACAAGTTCGTTGTTGGAGATACCGCGGAAGTCTACGACACGACTTCGCTCAACGTCCGCG
++
+OOHONNOHOOGJNIO[XVOXRKXSG___Q_XVZUMLQTGQIKTOQ__Z_Z]LFVRZY]TP__W_____
+@895:1:1:1384:20217 1:N:0:NNNNN
+CAGTGGCGACGACAAAAGCAAAGGGCCACGAGTTGTACGCCTGTTTGTTTTTGTCTCGGAATCCGGTGTGCATGATGTGTGT
++
+WTXOVNNNNOOOONNZM__U__[_______T]Z[`ZZ]_`_________ZZZZXX___RZ[]`]Z`[^Z]^X]^\______^
+@895:1:1:1384:20217 2:N:0:NNNNN
+CCACATTCGTCCCAGTGAGAGACAAACCAAAAACCAAACGAACCTTTTGAGCCAGTTTGTGCCG
++
+\WZWHV`]]W_____RZRWRZV`TZ___a_RTVIXZWWZ]URZUZ____JZ]]WYX[[^V____
+@895:1:1:1386:7536 1:N:0:NNNNN
+CAGGCGGCGTAAGCCCGGCGTCGCGGTCACTGCGACGGCGCCGACGACGAGCGTGAGGGCGGCGTCGAGCGGC
++
+aaaaaaaaaaOOOOO`_```QXU]]]SYW`N]]]R`````_`]_``U]`TQNWGSGPSYO_```XT`HUW`U`
+@895:1:1:1386:14753 1:N:0:NNNNN
+CAAGCCCATGCTCTACGCCGGCGGCTCATTCGTGCTCATGCCCGGCTACG
++
+bWb_bbb__bbb_`b]`W_\HWSZSQNQOQTXVVVURXIX[^[[^\Z___
+@895:1:1:1388:11093 2:N:0:NNNNN
+AACCATGAGCAACCGGTTCGAGTGCGAGATCAGCAAAGTCGAAAA
++
+TJZO[X`]]]JTZZSWFSWI[[KW[U_Z_S___\__WZU_Z__Y`
