@@ -1,3 +1,9 @@
+2014-05-22  Michael Wright  <wrigh517@msu.edu>
+
+    * scripts/fastq-to-fasta: Moved fastq-to-fasta.py into scripts from sandbox
+    * tests/test_scripts.py: Added tests for fastq-to-fasta.py
+    * tests/test-data: Added FASTQ file with N's in sequence for testing
+
 2014-05-16  Michael R. Crusoe  <mcrusoe@msu.edu>
 
     * docs/scripts.txt: include sweep-reads-buffered.py
